--- a/index.html
+++ b/index.html
@@ -2,15 +2,26 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+
+<!-- IMPORTANT: Mobile Support -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>For My Love Bindu ❤️</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Great+Vibes&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 
 <style>
+
+/* Reset */
+*{
+    box-sizing:border-box;
+}
+
+/* Body */
 body{
     margin:0;
     font-family:'Poppins',sans-serif;
-    background:linear-gradient(135deg,#ff9a9e,#fad0c4,#fbc2eb,#a18cd1);
+    background:linear-gradient(135deg,#ff9a9e,#fad0c4,#fbc2eb);
     color:white;
     text-align:center;
     overflow-x:hidden;
@@ -18,89 +29,88 @@ body{
 
 /* Container */
 .container{
-    max-width:900px;
-    margin:auto;
-    padding:50px 20px;
+    max-width:100%;
+    padding:25px 15px;
 }
 
 /* Headings */
 h1{
-    font-family:'Great Vibes',cursive;
-    font-size:3.6em;
-    text-shadow:0 0 10px rgba(255,255,255,0.5);
+    font-family:'Dancing Script',cursive;
+    font-size:2.8rem;
+    margin-bottom:10px;
 }
 
 h2{
     font-family:'Dancing Script',cursive;
-    font-size:2.8em;
+    font-size:2rem;
+    margin-top:5px;
 }
 
 .name{
-    color:#fff7d2;
+    color:#fff7c2;
     font-weight:bold;
 }
 
 /* Heart */
 .heart{
-    font-size:80px;
-    animation:beat 1.2s ease-in-out infinite;
+    font-size:60px;
+    animation:beat 1.5s infinite;
 }
 
 @keyframes beat{
     0%{transform:scale(1);}
-    50%{transform:scale(1.25);}
+    50%{transform:scale(1.2);}
     100%{transform:scale(1);}
 }
 
 /* Cards */
 .card{
-    background:rgba(255,255,255,0.20);
-    padding:28px;
-    border-radius:22px;
-    margin:28px 0;
-    backdrop-filter:blur(10px);
+    background:rgba(255,255,255,0.22);
+    padding:20px;
+    border-radius:18px;
+    margin:20px 0;
+    backdrop-filter:blur(6px);
 }
 
 /* Buttons */
 button{
-    background:linear-gradient(45deg,#ff758c,#ff7eb3);
+    background:#ff6f91;
     color:white;
     border:none;
-    padding:12px 28px;
-    font-size:16px;
-    border-radius:28px;
+    padding:10px 22px;
+    font-size:15px;
+    border-radius:25px;
     cursor:pointer;
-    transition:0.3s;
 }
 
 button:hover{
-    transform:scale(1.08);
+    opacity:0.9;
 }
 
 /* Input */
 input{
-    padding:10px;
-    border-radius:20px;
+    padding:8px;
+    border-radius:15px;
     border:none;
-    width:80%;
-    max-width:250px;
+    width:90%;
+    max-width:260px;
     text-align:center;
 }
 
 /* Music Button */
 #musicBtn{
     position:fixed;
-    top:15px;
-    right:15px;
-    background:rgba(255,255,255,0.9);
+    top:10px;
+    right:10px;
+    background:white;
     color:#ff4f7b;
-    padding:8px 16px;
-    border-radius:20px;
-    font-size:14px;
+    padding:6px 12px;
+    border-radius:18px;
+    font-size:13px;
     z-index:1000;
 }
 
-/* Proposal Popup */
+/* Popup */
 #proposal{
     position:fixed;
     inset:0;
@@ -112,88 +122,106 @@ input{
 }
 
 .proposal-box{
-    background:linear-gradient(135deg,#fff1f7,#ffe6f0);
+    background:white;
     color:#ff4f7b;
-    padding:35px;
-    border-radius:25px;
-    width:85%;
-    max-width:400px;
+    padding:25px;
+    border-radius:20px;
+    width:90%;
+    max-width:350px;
 }
 
 /* Secret */
 #secretText{
     display:none;
-    margin-top:15px;
-    font-size:18px;
-    color:#fffbe6;
+    margin-top:12px;
+    font-size:16px;
+    color:#fffde6;
 }
 
-/* Floating Hearts */
+/* Floating Hearts (Very Light) */
 .float{
     position:fixed;
     bottom:-30px;
-    font-size:20px;
-    animation:floatUp 10s ease-in-out infinite;
-    opacity:0.7;
+    font-size:18px;
+    animation:floatUp 14s linear infinite;
+    opacity:0.5;
     pointer-events:none;
 }
 
 @keyframes floatUp{
-    0%{transform:translateY(0) rotate(0deg);}
-    50%{transform:translateY(-55vh) rotate(8deg);}
-    100%{transform:translateY(-110vh) rotate(-8deg);}
+    from{transform:translateY(0);}
+    to{transform:translateY(-120vh);}
 }
+
+/* Disable heavy animation on small phones */
+@media (max-width:600px){
+
+    .heart{
+        animation:none;
+    }
+
+    .float{
+        display:none;
+    }
+
+    h1{font-size:2.2rem;}
+    h2{font-size:1.7rem;}
+}
+
 </style>
 </head>
 
 <body>
 
-<!-- Background Music -->
+<!-- Music -->
 <audio id="bgm" loop>
   <source src="https://www.bensound.com/bensound-music/bensound-romantic.mp3" type="audio/mpeg">
 </audio>
 
-<button id="musicBtn" onclick="toggleMusic()">🎵 Play Music</button>
+<button id="musicBtn" onclick="toggleMusic()">🎵 Music</button>
 
 <div class="container">
 
-<h1>Happy Valentine’s Day</h1>
+<h1>Happy Valentine’s Day ❤️</h1>
 
-<h2>My Love, <span class="name">Bindu GV</span> 💖</h2>
+<h2>My Love, <span class="name">Bindu GV</span></h2>
 
 <div class="heart">💗</div>
 
 <!-- Message -->
 <div class="card">
 <p><strong>My Dearest Bindu,</strong></p>
-<p>You are my happiness, my peace, and my home.</p>
-<p>With you, every day feels magical.</p>
-<p>I promise to love you forever 💕</p>
+<p>You are my happiness and my home.</p>
+<p>You make every day special.</p>
+<p>I love you forever 💕</p>
 </div>
 
 <!-- Proposal -->
 <div class="card">
-<h3>💍 A Question From My Heart</h3>
+<h3>💍 From My Heart</h3>
 <button onclick="openProposal()">Open 💖</button>
 </div>
 
 <!-- Secret -->
 <div class="card">
 <h3>🔐 Secret Message</h3>
-<input type="password" id="pwd" placeholder="Enter our secret">
+
+<input type="password" id="pwd" placeholder="Enter secret">
+
 <br><br>
+
 <button onclick="unlock()">Unlock ❤️</button>
 
 <div id="secretText">
-🌹 My love, you are my forever.  
-My today, my tomorrow, my always.  
-Thank you for choosing me 💍❤️
-</div>
+My love, you are my forever.  
+My today and tomorrow ❤️💍
 </div>
 
 </div>
 
-<!-- Proposal Popup -->
+</div>
+
+<!-- Popup -->
 <div id="proposal">
 
 <div class="proposal-box">
@@ -201,9 +229,7 @@ Thank you for choosing me 💍❤️
 <h2>💍 Bindu ❤️</h2>
 
 <p>
-Will you be my Valentine,  
-my partner,  
-and my forever love?
+Will you be my forever Valentine?
 </p>
 
 <button onclick="accept()">Yes 💖</button>
@@ -219,13 +245,14 @@ let playing=false;
 const bgm=document.getElementById("bgm");
 
 function toggleMusic(){
+
     if(!playing){
         bgm.play();
         document.getElementById("musicBtn").innerText="⏸ Pause";
         playing=true;
     }else{
         bgm.pause();
-        document.getElementById("musicBtn").innerText="🎵 Play Music";
+        document.getElementById("musicBtn").innerText="🎵 Music";
         playing=false;
     }
 }
@@ -236,40 +263,43 @@ function openProposal(){
 }
 
 function accept(){
-    alert("You are my dream come true 😍💍❤️");
+    alert("You made me the happiest 😍💍❤️");
     document.getElementById("proposal").style.display="none";
 }
 
 function reject(){
-    alert("No is not an option 😜💕");
+    alert("No is not allowed 😜💕");
 }
 
 /* Secret */
 function unlock(){
+
     let p=document.getElementById("pwd").value;
 
-    if(p==="naksha"){
+    if(p==="bindu"){
         document.getElementById("secretText").style.display="block";
     }else{
-        alert("Oops 😢 Wrong secret!");
+        alert("Wrong secret 😢");
     }
 }
 
-/* Floating Hearts */
+/* Light Hearts */
 function heart(){
+
+    if(window.innerWidth < 600) return;
+
     const h=document.createElement("div");
     h.className="float";
     h.innerHTML="❤️";
 
     h.style.left=Math.random()*100+"vw";
-    h.style.animationDuration=(Math.random()*4+8)+"s";
 
     document.body.appendChild(h);
 
-    setTimeout(()=>h.remove(),10000);
+    setTimeout(()=>h.remove(),14000);
 }
 
-setInterval(heart,900);
+setInterval(heart,1500);
 
 </script>
 
