--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ body{
     min-height:100vh;
     color:white;
     text-align:center;
+    overflow-x:hidden;
 }
 
 /* Main Container */
@@ -34,6 +35,8 @@ body{
     max-width:700px;
     margin:auto;
     padding:40px 20px;
+    position:relative;
+    z-index:2;
 }
 
 /* Header */
@@ -95,6 +98,7 @@ button:hover{
     padding:6px 12px;
     border-radius:18px;
     font-size:13px;
+    z-index:5;
 }
 
 /* Popup */
@@ -105,6 +109,7 @@ button:hover{
     display:none;
     justify-content:center;
     align-items:center;
+    z-index:10;
 }
 
 .proposal-box{
@@ -114,6 +119,28 @@ button:hover{
     border-radius:20px;
     width:90%;
     max-width:350px;
+}
+
+/* Floating Hearts */
+.heart-float{
+    position:fixed;
+    bottom:-20px;
+    font-size:22px;
+    animation:floatUp 8s linear forwards;
+    opacity:0.8;
+    pointer-events:none;
+    z-index:1;
+}
+
+@keyframes floatUp{
+    0%{
+        transform:translateY(0) scale(1);
+        opacity:0.9;
+    }
+    100%{
+        transform:translateY(-110vh) scale(1.3);
+        opacity:0;
+    }
 }
 
 </style>
@@ -211,6 +238,29 @@ function accept(){
 function reject(){
     alert("No is not allowed 😜💕");
 }
+
+/* Floating Hearts Generator */
+function createHeart(){
+
+    // Disable on very small phones for performance
+    if(window.innerWidth < 360) return;
+
+    const heart = document.createElement("div");
+    heart.className = "heart-float";
+    heart.innerHTML = "❤️";
+
+    heart.style.left = Math.random() * 100 + "vw";
+    heart.style.fontSize = (18 + Math.random() * 15) + "px";
+
+    document.body.appendChild(heart);
+
+    setTimeout(()=>{
+        heart.remove();
+    },8000);
+}
+
+// Create heart every 700ms (smooth)
+setInterval(createHeart,700);
 
 </script>
 
